support multiple style files, light/dark mode
