# server/src/domain/map/map-styles.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsUrl } from 'class-validator';
+
+export class MapStylesDto {
+  @IsString()
+  name!: string;
+
+  @IsUrl()
+  url!: string;
+
+  @IsString()
+  @ApiProperty({ type: String, enum: ['light', 'dark'] })
+  theme!: 'light' | 'dark' | undefined;
+}
