# server/src/domain/server-info/server-info.service.ts
@@ -78,7 +78,7 @@ export class ServerInfoService {
 
     return {
       loginPageMessage,
-      mapTileUrl: config.map.tileUrl,
+      mapStyles: config.map.styles,
       trashDays: config.trash.days,
       oauthButtonText: config.oauth.buttonText,
       isInitialized,
