# server/src/domain/system-config/dto/system-config-map.dto.ts
@@ -1,9 +1,13 @@
-import { IsBoolean, IsString } from 'class-validator';
+import { MapStylesDto } from '@app/domain';
+import { Type } from 'class-transformer';
+import { IsBoolean, IsObject, ValidateNested } from 'class-validator';
 
 export class SystemConfigMapDto {
   @IsBoolean()
   enabled!: boolean;
 
-  @IsString()
-  tileUrl!: string;
+  @IsObject()
+  @Type(() => MapStylesDto)
+  @ValidateNested()
+  styles!: MapStylesDto[];
 }
